Updated Grid to break filmstrip mode when called

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		<script src="src/jquery.animate-shadow-min.js"></script>
 		<script type="text/javascript">
 			$(function() {
-				$('#phototable-container').phototable({facebookAppId:'282797312000','photoW':110});
+				$('#phototable-container').phototable({facebookAppId:'282797312000','photoW':310,dragW:420});
 				$('.shuffle').click(function(){
 					$('#phototable-container').phototable('shuffle');						 
 				});
