--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 		</div>
 		<div id="testBox"></div>
 		<!-- The JavaScript -->
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-		<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.21/jquery-ui.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.21/jquery-ui.min.js"></script>
         <script src="src/jquery.ui.touch-punch.min.js"></script>
 		<script src="src/jquery.phototable.js"></script>
 		<script src="src/jquery.transform-0.6.2.min.js"></script>
